--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".App"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Movie">
         <activity
-            android:name=".FoundationActivity"
+            android:name=".presentation.activity.FoundationActivity"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.Movie.NoActionBar"
             android:exported="true">
