--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
 
     //https://square.github.io/retrofit/
-    implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
@@ -106,6 +106,15 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     //  Dynamic generator SP
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    implementation "com.jaredsburrows.retrofit:retrofit2-synchronous-adapter:0.5.0"
+
+
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0'
+
+
+
 
 
 }
